<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/RscoreTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RscoreTV"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="2dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/enButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textSize="8sp"
                android:onClick="onClickEnButton"
                android:text="EN" />

            <Button
                android:id="@+id/frButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textSize="8sp"
                android:onClick="onClickFrButton"
                android:text="FR" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/yourMarkET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/yourMarkTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/YourMarkTxt"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/classAverageET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/classAverageTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ClassAverageTxt"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/standardDevET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/standardDevTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/StandardDevTxt"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/highSchoolAvgET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/highSchoolAvgTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/HighSchoolAvgTxt"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <EditText
                        android:id="@+id/yourRScoreET"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:enabled="false"
                        android:focusable="false"
                        android:inputType="numberDecimal" />

                    <TextView
                        android:id="@+id/yourRScoreTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/YourRScoreTxt"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/calculateBtn"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickComputeBtn"
                        android:text="@string/CalculateTxt" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/clearBtn"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClickClearBtn"
                            android:text="@string/ClearTxt" />

                        <Button
                            android:id="@+id/exitBtn"
                            style="?android:attr/buttonStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="onClickExitBtn"
                            android:text="@string/ExitTxt" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
